<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/space"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/rocket" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/travel"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <ahmed.easyslider.EasySlider
        android:id="@+id/image_slider"
        android:layout_width="match_parent"
        android:layout_height="150dp">

    </ahmed.easyslider.EasySlider>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        kolom pertama-->
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

<!--            baris pertama-->
            <RelativeLayout
                android:layout_weight="1"
                android:background="#b6cafa"
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/bis"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
                <TextView
                    android:text="@string/bis"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="160dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <!--            baris kedua-->
            <RelativeLayout
                android:layout_weight="1"
                android:background="#b6cafa"
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/pesawat"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
                <TextView
                    android:text="@string/pesawat"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="160dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </LinearLayout>

        <!--        kolom kedua-->
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--            baris ketiga-->
            <RelativeLayout
                android:layout_weight="1"
                android:background="#b6cafa"
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/kapal"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
                <TextView
                    android:text="@string/kapal"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="160dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <!--            baris keempat-->
            <RelativeLayout
                android:layout_weight="1"
                android:background="#b6cafa"
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/mobil"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
                <TextView
                    android:text="@string/sewa_mobil"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="160dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </LinearLayout>

        <!--        kolom ketiga-->
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--            baris ketiga-->
            <RelativeLayout
                android:layout_weight="1"
                android:background="#b6cafa"
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/kereta"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
                <TextView
                    android:text="@string/kereta_api"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="160dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <!--            baris keempat-->
            <RelativeLayout
                android:layout_weight="1"
                android:background="#b6cafa"
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/tiket"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
                <TextView
                    android:text="@string/ticket"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="160dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>